--- a/AnalyzedBoard.html
+++ b/AnalyzedBoard.html
@@ -115,6 +115,7 @@
 			padding: 7px 8px;
 			margin:0;
 			text-decoration: none;
+			color: black;
 			text-shadow: 0 1px 1px rgba(0,0,0,0.3);
 		}
 
@@ -161,6 +162,7 @@
 
 		#nav ul li:hover a{
 			font-weight: bold;
+			width: 225px;
 		}
 
 
