--- a/index.html
+++ b/index.html
@@ -190,28 +190,27 @@
 
 		#coinView{
 			background-color: black;
-			clear: both;
 			height: 60px;
 		}
 
+
+
 		.numDiv{
-			float: left; 
-			width: 33.3%; 
-			height: 400px; 
-			background-color: #ecf1eaff; 
-			margin-bottom: 90px;
+			padding-bottom: 90px;
+			background-color: #ecf1eaff;
+			width:33.3%;
+			float: left;
 		}
 
-
 		.num{
+			margin-left: 50px;
 
-			margin-left: 100px; 
-			margin-right: 70px; 
-			margin-top: 80px; 
-			margin-bottom: 60px
+		  	padding-top: 90px;
+			margin-right: 50px;
 		}
 
 		#invBoard{
+			clear: both;
 			margin-left: 100px;
 		}
 
@@ -304,44 +303,59 @@
 			비트코인
 		</div>
 
-		<div class="numDiv">
+		<div class="commDiv" >
 
-			<div class="num">
 
-				<span style="color: #38761d; font-size: 50px; font-weight: bold;">No.1</span><br>
+			<div class="numDiv">
 
-				<span style="font-size: 35px; font-weight: bold;">Traiding Team</span>
-				<p style="font-size: 25px">
-					Our team had highly trained from huge capital company. Constantly make the  profits from well trained strategy.
-				</p>
 
-			</div>
-		</div>
-		<div class="numDiv">
 				<div class="num">
 
-					<span style="color: #1155cc; font-size: 50px; font-weight: bold;">100 +</span><br>
+					<span style="color: #38761d; font-size: 50px; font-weight: bold;">No.1</span><br>
 
-					<span style="font-size: 35px; font-weight: bold;">Analysis</span>
+					<span style="font-size: 35px; font-weight: bold;">Traiding Team</span>
 					<p style="font-size: 25px">
-						Great teams comes with consist analysis. Our team constantly analyze the data of Blockchain market.
+						Our team had highly trained from huge capital company. Constantly make the  profits from well trained strategy.
 					</p>
 
+				</div>
 			</div>
-		</div>
-		<div class="numDiv">
-				<div class="num">
 
-					<span style="color: #bf9000; font-size: 50px; font-weight: bold;">1.0 Billion +</span><br>
 
-					<span style="font-size: 35px; font-weight: bold;">Assets</span>
-					<p style="font-size: 25px">
-						Take the advantage of our assets. Huge property comes with huge assets. Ride our assets to get higher profits.
-					</p>
+				<div class="numDiv">
 
+					<div class="num">
+
+						<span style="color: #1155cc; font-size: 50px; font-weight: bold;">100 +</span><br>
+
+						<span style="font-size: 35px; font-weight: bold;">Analysis</span>
+						<p style="font-size: 25px">
+							Great teams comes with consist analysis. Our team constantly analyze the data of Blockchain market.
+						</p>
+
+					</div>
+
+				</div>
+
+
+				<div class="numDiv">
+
+					<div class="num">
+
+						<span style="color: #bf9000; font-size: 50px; font-weight: bold;">1.0 Billion +</span><br>
+
+						<span style="font-size: 35px; font-weight: bold;">Assets</span>
+						<p style="font-size: 25px">
+							Take the advantage of our assets. Huge property comes with huge assets. Ride our assets to get higher profits.
+						</p>
+
+					</div>
+
+				</div>
 			</div>
-		</div>
 
+
+		<hr>
 		<div id="invBoard">
 			<span style="font-size: 35px; font-family: Comic Sans MS; ">Investment Board</span>
 			<script type="text/javascript">
