--- a/managerWeb.html
+++ b/managerWeb.html
@@ -35,7 +35,7 @@
 
 	<table>
 		<tr>
-			<td><input type="button" name="" value="멤버 설정" class="button" style="background-color: #ecf1eaff; border-color:#ecf1eaff" /></td>
+			<td><input type="button" name="" value="멤버 설정" class="button" onClick="location.href='memberManage.html'" style="background-color: #ecf1eaff; border-color:#ecf1eaff" /></td>
 			<td><input type="button" name="" value="투자설명게시판 작성" class="button" style="background-color: #d9ead3ff; border-color:#d9ead3ff"/></td>
 			<td><input type="button" name="" value="종목 투자게시판 설정" class="button" style="background-color: #b9f6a1ff; border-color:#b9f6a1ff"/></td>
 		</tr>
