--- a/index.html
+++ b/index.html
@@ -194,24 +194,25 @@
 		}
 
 
+		.numFirst{
 
-		.numDiv{
-			padding-bottom: 90px;
-			background-color: #ecf1eaff;
-			width:33.3%;
-			float: left;
+			font-size: 50px; 
+			font-weight: bold;
+			text-align: left;
+
 		}
 
-		.num{
-			margin-left: 50px;
 
-		  	padding-top: 90px;
-			margin-right: 50px;
+		.numSecond{
+			font-size: 35px; 
+			font-weight: bold;
+			margin-left: 40px;
 		}
 
 		#invBoard{
 			clear: both;
 			margin-left: 100px;
+			margin-top: 80px;
 		}
 
 
@@ -303,59 +304,35 @@
 			비트코인
 		</div>
 
-		<div class="commDiv" >
 
 
-			<div class="numDiv">
 
+			<table style="padding-top: 70px; padding-bottom: 80px; background-color: #ecf1eaff">
+				<th class="numFirst"><span style="color: #38761d; margin-left: 40px;">No.1</span></th>
+				<th class="numFirst"><span style="color: #1155cc; margin-left: 40px;">100 +</span></th>
+				<th class="numFirst"><span style="color: #bf9000; margin-left: 40px;">1.0Billion +</span></th>
 
-				<div class="num">
+				<tr>
+					<td><span class="numSecond">Trading Team</span></td>
+					<td><span class="numSecond">Analysis</span></td>
+					<td><span class="numSecond">Assets</span></td>
+				</tr>
 
-					<span style="color: #38761d; font-size: 50px; font-weight: bold;">No.1</span><br>
-
-					<span style="font-size: 35px; font-weight: bold;">Traiding Team</span>
-					<p style="font-size: 25px">
+				<tr>
+					<td><p style="font-size: 25px; margin-left: 40px; padding-right: 40px;">
 						Our team had highly trained from huge capital company. Constantly make the  profits from well trained strategy.
-					</p>
+					</p></td>
 
-				</div>
-			</div>
-
-
-				<div class="numDiv">
-
-					<div class="num">
-
-						<span style="color: #1155cc; font-size: 50px; font-weight: bold;">100 +</span><br>
-
-						<span style="font-size: 35px; font-weight: bold;">Analysis</span>
-						<p style="font-size: 25px">
+					<td><p style="font-size: 25px; margin-left: 40px; padding-right: 40px;">
 							Great teams comes with consist analysis. Our team constantly analyze the data of Blockchain market.
-						</p>
+						</p></td>
 
-					</div>
-
-				</div>
-
-
-				<div class="numDiv">
-
-					<div class="num">
-
-						<span style="color: #bf9000; font-size: 50px; font-weight: bold;">1.0 Billion +</span><br>
-
-						<span style="font-size: 35px; font-weight: bold;">Assets</span>
-						<p style="font-size: 25px">
+					<td><p style="font-size: 25px; margin-left: 40px; padding-right: 40px;">
 							Take the advantage of our assets. Huge property comes with huge assets. Ride our assets to get higher profits.
-						</p>
+						</p></td>
+				</tr>
+			</table>
 
-					</div>
-
-				</div>
-			</div>
-
-
-		<hr>
 		<div id="invBoard">
 			<span style="font-size: 35px; font-family: Comic Sans MS; ">Investment Board</span>
 			<script type="text/javascript">
