--- a/managerWeb.html
+++ b/managerWeb.html
@@ -30,19 +30,19 @@
 	</style>
 </head>
 <body>
-	<img src="mblockLogo.png"  style="margin-top: 50px;" />
+	<img src="mblockLogo.png" onclick="location.href='index.html'"  style="margin-top: 50px;" />
 	<hr>
 
 	<table>
 		<tr>
 			<td><input type="button" name="" value="멤버 설정" class="button" onClick="location.href='memberManage.html'" style="background-color: #ecf1eaff; border-color:#ecf1eaff" /></td>
-			<td><input type="button" name="" value="투자설명게시판 작성" class="button" style="background-color: #d9ead3ff; border-color:#d9ead3ff"/></td>
+			<td><input type="button" name="" value="투자설명게시판 작성" onClick="location.href='analyzeManage.html'" class="button" style="background-color: #d9ead3ff; border-color:#d9ead3ff"/></td>
 			<td><input type="button" name="" value="종목 투자게시판 설정" class="button" style="background-color: #b9f6a1ff; border-color:#b9f6a1ff"/></td>
 		</tr>
 
 		<tr>
-			<td><input type="button" name="" value="공지사항 작성" class="button"style="background-color: #fce5cdff; border-color:#fce5cdff"/></td>
-			<td><input type="button" name="" value="문의 톡방" class="button" style="background-color: #f1c9a4ff; border-color:#f1c9a4ff"/></td>
+			<td><input type="button" name="" value="공지사항 작성" onClick="location.href='announceManager.html'"  class="button"style="background-color: #fce5cdff; border-color:#fce5cdff"/></td>
+			<td><input type="button" name="" value="문의 톡방" onClick="location.href= 'QnAChat.html'" class="button" style="background-color: #f1c9a4ff; border-color:#f1c9a4ff"/></td>
 			<td><input type="button" name="" value="멤버 단톡" class="button" style="background-color: #d5ae92ff; border-color:#d5ae92ff"/></td>
 		</tr>
 	</table>
