--- a/InvestedBoard.html
+++ b/InvestedBoard.html
@@ -243,7 +243,7 @@
 						<li><a href="InvestedBoard.html">Invested Board</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Customer</a></li>
+				<li><a href="customer.html">Customer</a></li>
 				<li><a href="Login.html">Admin</a></li>
 		</ul>
 	</div>
