--- a/Crew.html
+++ b/Crew.html
@@ -225,7 +225,7 @@ a {
 						<li><a href="InvestedBoard.html">Invested Board</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Customer</a></li>
+				<li><a href="customer.html">Customer</a></li>
 				<li><a href="Login.html">Admin</a></li>
 		</ul>
 	</div>
