--- a/AnalyzedBoard.html
+++ b/AnalyzedBoard.html
@@ -182,7 +182,7 @@
 		/*analyed list*/
 		.item{
 		  float: left;
-		  margin-right: 40px;
+		  margin-right: 20px;
 		}
 
 		.CrewCard {
@@ -212,8 +212,7 @@
 		}
 
 		.crewBody{
-			margin-top: 100px;
-			margin-left: 70px;
+			margin: 100px;
 		}
 
 		.title{
