--- a/Crew.html
+++ b/Crew.html
@@ -167,10 +167,11 @@ a {
 		}
 
 		#crewBody {
-			margin-top: 50px;
+			margin: 50px;
 			clear: both;
 			height:100%;
 			width:100%;
+
 			
 		}
 
@@ -179,7 +180,7 @@ a {
 			  transition: 0.3s;
 			  width: 300px;
 			  text-align: center;
-			  margin-left: 40px;
+			  margin-left: 20px;
 			  margin-bottom: 24px;
 
 			}
@@ -226,7 +227,7 @@ a {
 					</ul>
 				</li>
 				<li><a href="customer.html">Customer</a></li>
-				
+
 				<li><a href="Login.html">Admin</a></li>
 		</ul>
 	</div>
