--- a/customer.html
+++ b/customer.html
@@ -195,7 +195,7 @@
 		<ul id="nav">
 				<li><a href=#>Business</a>
 					<ul>
-						<li><a href="#">사업 소개</a></li>
+						<li><a href="Business">사업 소개</a></li>
 						<li><a href="Crew.html">Member</a></li>
 						<li><a href="#">Member</a></li>
 					</ul>
@@ -215,6 +215,8 @@
 	<div id="customerTop">
 		<p style="color: white; font-size: 60px; font-weight: bold; margin: 0; padding-top: 100px;">We Care.</p>
 	</div>
+
+
 <h1 style="text-align: center; padding-top: 60px;">공 지 사 항 [Q & A]</h1>
 	<div id ="QnA" >
 		<script type="text/javascript">
