--- a/AnalyzedBoard.html
+++ b/AnalyzedBoard.html
@@ -236,7 +236,7 @@
 		<ul id="nav">
 				<li><a href=#>Business</a>
 					<ul>
-						<li><a href="#">사업 소개</a></li>
+						<li><a href="Business.html">사업 소개</a></li>
 						<li><a href="Crew.html">Member</a></li>
 						<li><a href="#">Member</a></li>
 					</ul>
