--- a/Business.html
+++ b/Business.html
@@ -3,6 +3,31 @@
 <head>
 	<title></title>
 
+	<script type="text/javascript">
+
+		function affiliatesUI(){
+			const affiliates = ["firms/rokcapital.png", "firms/despread.png", "firms/appLinkers.png", "firms/traderjoe.png"];
+
+			const affDiv = document.getElementById('affiliate');
+			const table = document.createElement('table');
+			table.setAttribute("class", "affTable");
+			const row = document.createElement('tr');
+
+			for(var i=0; i<affiliates.length; i++){
+				var td = document.createElement('td');
+				var firmImg = document.createElement('img')
+				firmImg.src = affiliates[i];
+				firmImg.setAttribute("class", "firmImg");
+				td.appendChild(firmImg);
+				row.appendChild(td);
+			}
+
+			table.appendChild(row);
+			affDiv.appendChild(table);
+		}
+		
+	</script>
+
 	<style type="text/css">
 		a {
 			text-decoration: none;
@@ -105,6 +130,15 @@
 
 		}
 
+		.firmImg{
+			width: 180px;
+			height: 120px;
+			margin-right: 80px;
+		}
+		.affTable{
+			margin:0 auto;
+		}
+
 	</style>
 </head>
 <body>
@@ -115,7 +149,7 @@
 		<ul id="nav">
 			<li><a href=#>Business</a>
 				<ul>
-					<li><a href="#">사업 소개</a></li>
+					<li><a href="Business">사업 소개</a></li>
 					<li><a href="Crew.html">Member</a></li>
 					<li><a href="#">Member</a></li>
 				</ul>
@@ -173,9 +207,23 @@
 			</tr>
 
 			<tr>
-				<td ><img src="analyzeImg.png" style="width: 500px; height: 330px; margin-left: 50px"></td>
+				<td ><img src="chartImg.png" style="width: 500px; height: 330px; margin-left: 50px"></td>
 			</tr>
 		</table>
+	</div>
+
+	<div id="busHistory">
+		<img src="mblockHistory.png" style="width: 80%; height: 400px; margin: 130px;">
+
+	</div>
+
+	<div id="affiliate">
+		<h1 style="text-align: center; margin-bottom: 30px;">PARTNERSHIP.</h1>
+		<hr style="margin-bottom: 20px;">
+		<script type="text/javascript">
+			affiliatesUI();
+		</script>
+		
 	</div>
 
 </body>
