--- a/Crew.html
+++ b/Crew.html
@@ -215,7 +215,7 @@ a {
 		<ul id="nav">
 				<li><a href=#>Business</a>
 					<ul>
-						<li><a href="#">사업 소개</a></li>
+						<li><a href="Business">사업 소개</a></li>
 						<li><a href="Crew.html">Member</a></li>
 						<li><a href="#">Member</a></li>
 					</ul>
