--- a/InvestedBoard.html
+++ b/InvestedBoard.html
@@ -232,9 +232,8 @@
 		<ul id="nav">
 				<li><a href=#>Business</a>
 					<ul>
-						<li><a href="#">사업 소개</a></li>
+						<li><a href="Business.html">사업 소개</a></li>
 						<li><a href="Crew.html">Member</a></li>
-						<li><a href="#">Member</a></li>
 					</ul>
 				</li>
 				<li><a href="#">Portfolio</a>
